# weather-data-analysis-dashboard

./: Dockerfile  Prediction.py  Prediction_update.py  Predictions.py  README.md  copy.py  copyfede.py  data_function.py  fede.py  main copy.py  main.py  pyproject.toml  requirements.txt  temp.py  updated_page  updated_page.py  weather_dashboard_webpage.py
app/: chat.py  data_function.py  main.py
