[project]
name = "weather-data-analysis-dashboard"
version = "0.1.0"
description = ""
authors = [
    {name = "N"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit (>=1.44.1,<2.0.0)",
    "streamlit-extras (>=0.6.0,<0.7.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "vega-datasets (>=0.9.0,<0.10.0)",
    "pydeck (>=0.9.1,<0.10.0)",
    "plotly (>=6.0.1,<7.0.0)",
    "altair (>=5.5.0,<6.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "shapely (>=2.1.0,<3.0.0)",
    "pytz (>=2025.2,<2026.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"

